# packages

./: .gitignore  .prettierrc  .tool-versions  CODEOWNERS  LICENSE  README.md  jex.code-workspace  packages.code-workspace  renovate.json  zui.code-workspace
common/: package.json  pnpm-lock.yaml
const/: package.json  pnpm-lock.yaml  readme.md
depsynky/: package.json  pnpm-lock.yaml  readme.md
entities/: .gitignore  .npmignore  Cargo.toml  README.md  build.ts  package.json  pnpm-lock.yaml  test.ts  tsconfig.build.json  tsconfig.json  vitest.config.ts
entities-wasm/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
entities-wasm/scripts/: postprocess.ts
entities-wasm/src/: init.ts  scores.rs  strings.rs
es-node/: package.json  pnpm-lock.yaml  readme.md  tsconfig.json
expresso/: CHANGELOG.md  jest.config.js  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
genenv/: build.ts  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
gravity/: .gitignore  .npmignore  .prettierignore  CHANGELOG.md  Cargo.toml  build.ts  package.json  pnpm-lock.yaml  readme.md  tsconfig.build.json  tsconfig.json
gravity/pkg/: package.json
gravity/rssrc/: clustering.rs  lib.rs  pipeline.rs  types.rs
gravity/rssrc/umap/: ab.rs  ab_tests.rs  fuzzy_tests.rs  init.rs  init_tests.rs  knn.rs  mod.rs  mod_tests.rs  rand.rs  sgd.rs  sgd_tests.rs
gravity/rust/: Cargo.toml
gravity/rust/src/: clustering.rs  lib.rs  output.rs  pipeline.rs  types.rs
gravity/rust/src/umap/: fuzzy.rs
gravity/rust/src/wasm/: mod.rs
gravity/scripts/: build-wasm.mjs
gravity/src/: index.test.ts  index.ts  types.ts
jex/: build-browser.js  build-node.js  package.json  pnpm-lock.yaml  readme.md  shims.js  tsconfig.json  vitest.config.ts
log4bot/: package.json  pnpm-lock.yaml  readme.md  tsconfig.json  tsup.config.ts
mcp-gen/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
opapi/: .npmignore  CHANGELOG.md  CONTRIBUTING.md  biome.json  foo.js  package.json  pnpm-lock.yaml  readme.md  tsconfig.json  vite.config.ts
overwatch/: .gitignore  CLAUDE.md  LICENSE  README.md  build.ts  index.ts  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts
pingrip/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
promex/: .npmignore  package.json  pnpm-lock.yaml  readme.md  tsconfig.json  vite.config.ts
ptb-schema/: package.json  pnpm-lock.yaml  readme.md  tsconfig.json
pulumi-clickhouse/: README.md  getApiKeyId.ts  getPrivateEndpointConfig.ts  index.ts  package.json  pnpm-lock.yaml  privateEndpointRegistration.ts  provider.ts  service.ts  servicePrivateEndpointsAttachment.ts  serviceTransparentDataEncryptionKeyAssociation.ts  (+2 more)
thicktoken/wasm/: .gitignore  Cargo.toml  index.ts  wasm.d.ts
thicktoken/wasm/pkg/: .gitignore  README.md  package.json  thicktoken_wasm.d.ts  thicktoken_wasm.js  thicktoken_wasm_bg.wasm  thicktoken_wasm_bg.wasm.d.ts
thicktoken/wasm/scripts/: gen-assets.mjs
thicktoken/wasm/src/: lib.rs
verel/: .gitignore  Cargo.toml  build.ts  package.json  pnpm-lock.yaml  readme.md  tsconfig.build.json  tsconfig.json
verel/e2e/: consts.ts  node.ts  utils.ts
verel/e2e/browser/: index.ts  script.ts
verel/pkg/: package.json
verel/rssrc/: lib.rs  model.rs
verel/src/: index.ts
verel/tests/: index.test.ts
(+997 files in other folders)
