[package]
name = "verel"
version = "0.0.1"
authors = ["Francois Levasseur <francois.levasseur@botpress.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "./rssrc/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
vrl = { version = "0.7.0" }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
gloo-utils = { version = "0.2", features = ["serde"] }
zstd-sys = { version = "=2.0.9+zstd.1.5.5" }

[build-dependencies]
cargo_toml = "0.16.3"
